Improve onboarding screen

--- a/src/pages/Onboarding.css
+++ b/src/pages/Onboarding.css
@@ -35,3 +35,9 @@
 .disabled-button {
   cursor: not-allowed;
 }
+
+.onboarding-version {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
