--- a/src/pages/IDE.css
+++ b/src/pages/IDE.css
@@ -26,7 +26,6 @@
   justify-content: center;
   align-items: center;
   gap: var(--padding-lg);
-  margin-bottom: var(--padding-lg);
 }
 
 .screenshot-img-container {
@@ -36,12 +35,12 @@
   align-items: center;
   min-height: 0;
   min-width: 0;
-  /* No padding or margin here */
 }
 
 .screenshot-img-container > img {
+  transform: translateY(calc(-1 * var(--padding-xs)));
   max-width: 100%;
-  max-height: calc(100% - var(--padding-md) * 2);
+  max-height: calc(100% - var(--padding-md) * 4);
   object-fit: contain;
   display: block;
 }
